--- a/discountsell/build.gradle
+++ b/discountsell/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'com.android.support:support-v4:24.0.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
 }
