这是一个recycler适配器

--- a/discountsell/src/main/AndroidManifest.xml
+++ b/discountsell/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".FourClick"></activity>
+        <activity android:name=".FourGridActivity"></activity>
     </application>
 
 </manifest>
