--- a/discountsell/build.gradle
+++ b/discountsell/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support:support-v4:24.0.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
     compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
 }
