--- a/discountsell/build.gradle
+++ b/discountsell/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:support-v4:23.3.0'
+    compile project(':xrecyclerview')
+    compile project(':library')
 }
