--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo', ':app1', ':FlycoTabLayout_Lib', ':myapplication'
+include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo', ':myapplication', ':app1', ':xrecyclerview'
+include ':library'
