--- a/discountsell/build.gradle
+++ b/discountsell/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    compile 'com.github.razerdp:BasePopup:v1.1.7'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':mhvp-core')
@@ -37,4 +38,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile project(':xrecyclerview')
     compile project(':library')
+    compile 'com.android.support:gridlayout-v7:24.1.0'
 }
