--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo', ':myapplication', ':app1', ':xrecyclerview'
+include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo', ':myapplication', ':app1', ':xrecyclerview', ':app2', ':lib'
 include ':library'
