--- a/discountsell/src/main/AndroidManifest.xml
+++ b/discountsell/src/main/AndroidManifest.xml
@@ -22,17 +22,8 @@
         <activity android:name=".activity.JumpActivity" />
         <activity android:name=".FourGridActivity" />
         <activity android:name=".DetailsActivity" />
-        <activity android:name=".activity.SearchActivity"
-            ></activity>
-        <activity android:name=".FourClick"></activity>
-        <activity android:name=".FourDetailsActivity"></activity>
-        <activity android:name=".activity.JumpActivity"></activity>
-
-        <activity android:name=".FourGridActivity"
-            >
-        </activity>
-
-        <activity android:name=".DetailsActivity"/>
+        <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.Search2Activity"></activity>
     </application>
 
 </manifest>
