--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
-include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo'
-include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo', ':xrecyclerview'
-include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':demo', ':myapplication', ':xrecyclerview', ':app2', ':lib'
-include ':xrecyclerview'
+include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':xrecyclerview'
+include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core'
+include ':app', ':discountsell', ':mhvp-integrated-ptr', ':mhvp-core', ':myapplication', ':app2', ':lib'
 include ':library'
 
